# geneformer-uv-starter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh  start.sh
.github/workflows/: ci.yml
analysis/: README.md  __init__.py
analysis/notebooks/: 02_lung_allograft_classification_tutorial.ipynb
analysis/profiles/: pyproject.cpu.toml  pyproject.cu130.toml  pyproject.default.toml
analysis/results/lung-allograft/: README.md  baseline_confusion_matrix_normalized.csv  finetuned_classification_report.csv  finetuned_confusion_matrix_normalized.csv  misclassification_summary.csv  model_comparison.csv
analysis/scripts/: __init__.py  build_lung_allograft_tutorial.py
config/: tmux.conf
datasets/: lung_allograft.manifest.json  nsclc_integrated.manifest.json
docs/: machine-setup.md
docs/results/lung-allograft/: README.md  baseline_classification_report.csv  per_donor_comparison.csv
notebooks/: 01_stage1_cell_type_tutorial.ipynb  02_lung_allograft_classification_tutorial.ipynb
scripts/: __init__.py  bootstrap_workspace.sh  build_lung_allograft_tutorial.py  build_stage1_tutorial.py  install_jupyterlab_tool.sh  smoke_test.py
templates/: .gitignore  README.md  analysis.py  pyproject.cpu.toml  pyproject.cu130.toml  pyproject.default.toml
tests/: test_repository_structure.py  test_smoke_test.py  test_start_script.py  test_tutorial_notebook.py
