[project]
name = "geneformer-uv-starter"
version = "0.1.0"
description = "Reproducible Geneformer analysis environments with uv"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.12",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
